--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:tailwind": "tailwindcss -i ./src/index.css -o ./src/output.css --watch",
+    "tailwind:build": "postcss /src/index.css -o /src/output.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +36,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.0.24"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
